[gd_scene load_steps=14 format=2]

[ext_resource path="res://screens/leaderboard/leaderboard.gd" type="Script" id=1]
[ext_resource path="res://screens/leaderboard/quadrado_leaderboard.png" type="Texture" id=2]
[ext_resource path="res://screens/leaderboard/trophy.png" type="Texture" id=3]
[ext_resource path="res://fonts/04B_03__.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://screens/leaderboard/input-field-active.png" type="Texture" id=5]
[ext_resource path="res://screens/leaderboard/button-active.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]

size = 22
use_mipmaps = true
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 18
use_mipmaps = true
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="AtlasTexture" id=3]

flags = 0
atlas = ExtResource( 5 )
region = Rect2( 0, 51, 234, 46 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false

[sub_resource type="AtlasTexture" id=4]

flags = 0
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 234, 51 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false

[sub_resource type="DynamicFont" id=5]

size = 18
use_mipmaps = true
use_filter = false
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=6]

flags = 0
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 234, 34 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false

[sub_resource type="AtlasTexture" id=7]

flags = 0
atlas = ExtResource( 6 )
region = Rect2( 0, 34, 234, 34 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false

[node name="Control" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Margin", "Rect" ]

[node name="Backdrop" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Material", "Visibility" ]

[node name="Backdrop2" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 25.0
margin_right = 287.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "Focus", "Hint", "Mouse", "Rect", "Size Flags", "Theme" ]

[node name="PlayerScore" type="Label" parent="." index="2"]

visible = false
modulate = Color( 0.0845642, 0.584954, 0.636719, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 118.0
margin_right = 512.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "SUA PONTUACAO: 0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Visibility", "custom_fonts" ]

[node name="VBoxContainer2" type="VBoxContainer" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 170.0
margin_right = 512.0
margin_bottom = 281.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Player1" type="Label" parent="VBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 512.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "0 - Player 1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Visibility", "custom_fonts" ]

[node name="Player2" type="Label" parent="VBoxContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 23.0
margin_right = 512.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "0 - Player 1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Visibility", "custom_fonts" ]

[node name="Player3" type="Label" parent="VBoxContainer2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 512.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "0 - Player 1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Visibility", "custom_fonts" ]

[node name="Player4" type="Label" parent="VBoxContainer2" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 69.0
margin_right = 512.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "0 - Player 1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Visibility", "custom_fonts" ]

[node name="Player5" type="Label" parent="VBoxContainer2" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 92.0
margin_right = 512.0
margin_bottom = 111.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "0 - Player 1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Visibility", "custom_fonts" ]

[node name="InputText" type="TextureRect" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 146.0
margin_top = 296.0
margin_right = 380.0
margin_bottom = 347.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="InputText2" type="TextureRect" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 146.0
margin_top = 291.0
margin_right = 380.0
margin_bottom = 342.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 4 )
stretch_mode = 0

[node name="LineEdit" type="LineEdit" parent="." index="6"]

visible = false
light_mask = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 149.0
margin_top = 314.0
margin_right = 379.0
margin_bottom = 343.0
rect_min_size = Vector2( 230, 23 )
rect_scale = Vector2( 0.99, 0.9 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 4
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
text = "Nome"
align = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder", "Rect", "Visibility", "custom_fonts" ]

[node name="SaveButton" type="TextureButton" parent="." index="7"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 146.0
margin_top = 359.0
margin_right = 380.0
margin_bottom = 393.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = SubResource( 6 )
texture_pressed = SubResource( 7 )
_sections_unfolded = [ "Grow Direction", "Rect" ]

[node name="SairBotao" type="Button" parent="." index="8"]

modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 6.0
margin_right = 102.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Visibility" ]

[node name="Sair" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 16.0
margin_right = 114.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "< Voltar"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Visibility", "custom_fonts" ]

[connection signal="focus_entered" from="LineEdit" to="." method="_on_LineEdit_focus_entered"]

[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_focus_exited"]

[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]

[connection signal="button_down" from="SairBotao" to="." method="_on_SairBotao_button_down"]


